--- a/hw14/style.css
+++ b/hw14/style.css
@@ -3,6 +3,27 @@
   flex-direction: column;
 }
 
-input[type='submit'] {
+/*button {
   margin-top: 50px;
+}*/
+
+#modalWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: aqua;
+  display: none;
+  padding-top: 200px;
+}
+
+#greetings {
+  display: inline-block;
+  padding: 5px;
+  border: 5px solid red;
+  text-align: center;
+  background-color: white;
 }
