--- a/parus/css/src/style.css
+++ b/parus/css/src/style.css
@@ -2,21 +2,97 @@ body {
   height: 2000px;
   font-size: 1em;
   font-family: sans-serif;
+  margin: 0;
 }
 header {
   width: 100%;
-  height: 45px;
+  height: 50px;
   border-bottom: 1px solid black;
   position: fixed;
+  background-color: white;
+  z-index: 2;
+}
+header .wrapper {
   display: flex;
   justify-content: space-between;
   color: red;
+  width: 100%;
 }
-header a {
+header .wrapper a {
   display: block;
   width: 45px;
   height: 45px;
   background-image: url(../../img/logo.png);
   background-size: cover;
   text-indent: -9999px;
+}
+header .wrapper .menu-icon {
+  position: relative;
+  margin-top: 10px;
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+}
+header .wrapper .menu-icon:hover {
+  cursor: pointer;
+}
+header .wrapper .menu-icon div {
+  width: 35px;
+  height: 0px;
+  border-bottom: 2px solid black;
+}
+header .wrapper .menu-icon div:before {
+  position: absolute;
+  top: 10px;
+  display: block;
+  content: "  ";
+  width: 35px;
+  height: 2px;
+  background-color: black;
+}
+header .wrapper .menu-icon div:after {
+  position: absolute;
+  top: 20px;
+  display: block;
+  content: "  ";
+  width: 35px;
+  height: 2px;
+  background-color: black;
+}
+header nav {
+  width: 100%;
+  position: absolute;
+  right: -100%;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+}
+header nav button {
+  width: 250px;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #c09451;
+  background-color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+header nav ul {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+header nav ul li {
+  margin-bottom: 10px;
+}
+header nav ul li a {
+  color: black;
+  text-decoration: none;
+}
+#first-screen {
+  padding-top: 50px;
 }
