--- a/parus/css/src/style.css
+++ b/parus/css/src/style.css
@@ -1,7 +1,7 @@
 body {
   height: 2000px;
   font-size: 1em;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
 }
 header {
@@ -11,6 +11,7 @@ header {
   position: fixed;
   background-color: white;
   z-index: 2;
+  padding-top: 5px;
 }
 header .wrapper {
   display: flex;
@@ -22,6 +23,7 @@ header .wrapper a {
   display: block;
   width: 45px;
   height: 45px;
+  margin-left: 15px;
   background-image: url(../../img/logo.png);
   background-size: cover;
   text-indent: -9999px;
@@ -95,4 +97,65 @@ header nav ul li a {
 }
 #first-screen {
   padding-top: 50px;
+  background-image: url('../../img/first-screen-bg.png');
+  color: white;
+  text-align: center;
+}
+#first-screen h1 {
+  margin-top: 20%;
+  margin-bottom: 0;
+  font-family: 'PT Serif', serif;
+  font-size: 2em;
+  font-weight: normal;
+  text-transform: uppercase;
+  line-height: 1.3em;
+}
+#first-screen span {
+  font-family: 'PT Serif', serif;
+  font-size: 3em;
+  font-weight: bold;
+}
+#first-screen div {
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+#first-screen p {
+  font-size: 1.4em;
+  line-height: 1.3em;
+  font-family: 'PT Serif', serif;
+}
+#first-screen p:first-of-type {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+#first-screen p:last-of-type {
+  margin-top: 0;
+}
+#first-screen .wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+  padding-bottom: 5%;
+}
+#first-screen .wrapper button {
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3%;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid #c09451;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.9em;
+  text-transform: uppercase;
+}
+#first-screen .wrapper button:first-of-type {
+  width: 175px;
+}
+#first-screen .wrapper button:last-of-type {
+  width: 130px;
+}
+#first-screen .wrapper button:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
