--- a/parus/css/src/style.less
+++ b/parus/css/src/style.less
@@ -4,11 +4,15 @@
 // font-family: 'PT Sans', sans-serif;
 
 @fill-color: #c09451;
+// need fallback with safe web fonts
+@heading-font:  'PT Serif', serif;
+@main-font: 'Open Sans', sans-serif;
+@additional-font: 'PT Sans', sans-serif;
 
 body {
   height: 2000px;
   font-size: 1em;
-  font-family: sans-serif;
+  font-family: @main-font;
   margin: 0;
 }
 
@@ -19,6 +23,7 @@ header {
   position: fixed;
   background-color: white;
   z-index: 2;
+  padding-top: 5px;
   
 
   .wrapper {
@@ -31,6 +36,7 @@ header {
     display: block;
     width: 45px;
     height: 45px;
+    margin-left: 15px;
     background-image: url(../../img/logo.png);
     background-size: cover;
     text-indent: -9999px;
@@ -117,4 +123,76 @@ header {
 
 #first-screen {
   padding-top: 50px;
+  background-image: url('../../img/first-screen-bg.png');
+  color: white;
+  text-align: center;
+
+  h1 {
+    margin-top: 20%;
+    margin-bottom: 0;
+    font-family: @heading-font;
+    font-size: 2em;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 1.3em;
+  }  
+
+  span {
+        font-family: @heading-font;
+        font-size: 3em;
+        font-weight: bold;
+  }
+
+  div {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  p {
+    font-size: 1.4em;
+    line-height: 1.3em;
+    font-family: @heading-font;
+  }
+
+  p:first-of-type {
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+
+  p:last-of-type {
+    margin-top: 0;
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+     margin-top: 5%;
+    padding-bottom: 5%;
+
+    button {
+      height: 30px;
+          margin-left: auto;
+    margin-right: auto;
+        margin-bottom: 3%;
+    border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0);
+      border: 1px solid @fill-color;
+      color: white;
+      font-family: @main-font;
+      font-size: 0.9em;
+      text-transform: uppercase;
+
+      &:first-of-type {
+        width: 175px;
+      }
+
+      &:last-of-type {
+        width: 130px;
+      }
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
 }
