--- a/parus/css/src/style.less
+++ b/parus/css/src/style.less
@@ -106,6 +106,13 @@ header {
       background-color: white;
           text-transform: uppercase;
           font-weight: bold;
+
+          &:hover {
+            cursor: pointer;
+            // need cool color for button-hover
+            background-color: #888ea2;
+            color: white;
+          }
     }
 
     ul {
@@ -119,6 +126,10 @@ header {
             a {
               color: black;
               text-decoration: none;
+
+              &:hover {
+                text-decoration: underline;
+              }
         }
       }
     }
@@ -225,6 +236,7 @@ header {
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
+        margin-bottom: 10%;
   }
 
   .yaht-carousel {
@@ -261,19 +273,156 @@ header {
     }
 
     .slick-next:before {
-      right: 96px;
+      right: 80px;
       content: '›';
     }
 
     .slick-prev:before {
-      left: 96px;
+      left: 112px;
       content: '‹';
     }
 
-// how to make hover on slick-arrows? 
+
 
     img {
       max-width: 100%;
     }
   }
+}
+// TODO: 
+// - how to make hover on slick-arrows? 
+// - add p to carousel 
+
+#route {
+  width: 100%;
+  background-image: url(../../img/route-bg.jpg);
+  padding-top: 10%;
+  padding-bottom: 10%;
+  color: white;
+
+  .header {
+    display: flex;
+     justify-content: center;
+  }
+
+  h3, h2 {
+    font-family: @main-font;
+  }
+
+  .route-item {
+    text-align: center;
+
+    img {
+      max-width: 100%;
+      width: 90%;
+    }
+
+    p {
+      margin-left: 5%;
+      margin-right: 5%;
+      font-size: 1em;
+       font-family: @additional-font;
+       font-style: italic;
+      margin-bottom: 10%;
+    }
+  }
+
+      button {
+      width: 265px;
+      height: 30px;
+      // why margin-auto don't work? 
+      margin-left: 7%;
+       border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0);
+      border: 1px solid @fill-color;
+      color: white;
+      font-family: @main-font;
+      font-size: 0.9em;
+      text-transform: uppercase;
+      background-image: url(../../img/arrow-down.svg);
+      background-repeat: no-repeat;
+      background-position-x: 225px;
+      background-position-y: 7px;
+      text-align: left;
+      padding-left: 20px;
+
+            &:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+      }
+    }
+}
+
+#contacts {
+  width: 100%;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  font-family: @heading-font;
+  color: @main-color;
+
+  .header {
+    display: flex;
+    justify-content: center;
+
+    h3 {
+      font-family: @main-font;
+      color: black;
+    }
+  }
+
+  .contact {
+    width: 70%;
+    height: 40px;
+        margin-left: auto;
+    margin-right: auto;
+    line-height: 40px;
+    padding-left: 60px;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    background-position-x: 20px;
+    background-position-y: 5px;
+  }
+
+  .phone {
+     background-image: url(../../img/phone.png);
+  }
+
+  .email {
+    background-image: url(../../img/email.png);
+  }
+
+  .socials-wrapper {
+    display: flex;
+        justify-content: space-around;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+
+    a {
+      display: block;
+      text-indent: -9999px;
+      background-repeat: no-repeat;
+          min-width: 40px;
+    min-height: 40px;
+    background-size: 40px;
+
+    // create sprite for social-icons with hover
+
+      &:first-of-type {
+        background-image: url(../../img/vk.png);
+      }
+
+      &:nth-of-type(2) {
+        background-image: url(../../img/fb.png);
+      }
+      &:last-of-type {
+        background-image: url(../../img/inst.png);
+      }
+    }
+  }
+}
+
+footer {
+  
 }
