--- a/nakitelTest/css/src/style.css
+++ b/nakitelTest/css/src/style.css
@@ -132,18 +132,19 @@ main {
   background-image: url(../../img/main-bg.jpg);
 }
 #first {
-  width: 100%;
-  height: 470px;
-  box-shadow: inset 0px 5px 5px rgba(16, 16, 15, 0.5);
-  font-family: "Helvetica Neue Regular";
-  color: white;
-  border-bottom: 10px solid transparent;
   background-image: radial-gradient(circle 307px at center, #b1eb76 0%, #4b791f 100%), linear-gradient(to bottom right, transparent 50.5%, #608b30 50.5%), linear-gradient(to bottom left, transparent 50.5%, #608b30 50.5%), linear-gradient(to top right, transparent 50.5%, #608b30 50.5%), linear-gradient(to top left, transparent 50.5%, #608b30 50.5%);
   background-repeat: repeat, repeat-x, repeat-x, repeat-x, repeat-x;
   background-position: 0 0, 10px 0, 10px 0, 10px 100%, 10px 100%;
   background-size: auto auto, 20px 20px, 20px 20px, 20px 20px, 20px 20px;
   background-clip: padding-box, border-box, border-box, border-box, border-box;
   background-origin: padding-box, border-box, border-box, border-box, border-box;
+  width: 100%;
+  height: 470px;
+  margin-bottom: 180px;
+  box-shadow: inset 0px 5px 5px rgba(16, 16, 15, 0.5);
+  font-family: "Helvetica Neue Regular";
+  color: white;
+  border-bottom: 10px solid transparent;
 }
 #first .upper {
   width: 1200px;
@@ -303,18 +304,63 @@ main {
 }
 #content {
   width: 100%;
-  height: 200px;
+}
+#content h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Bebas Neue Regular";
+  color: #608b30;
+  font-size: 3em;
+}
+#content .wrapper {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+}
+#content .wrapper nav ul {
+  list-style: none;
+  padding: 0;
+  font-family: "Helvetica Neue Regular";
+}
+#content .wrapper nav ul li a {
+  display: block;
+  margin-bottom: 10px;
+  color: #608b30;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+#content .wrapper nav ul li a:hover {
+  text-decoration: underline;
+}
+#content .wrapper nav ul li .active {
+  color: #ef001d;
+}
+#content .wrapper article {
+  width: 770px;
+  height: 852px;
+  background-size: contain;
+  background-image: url(../../img/article-bg.png);
+  padding-top: 30px;
+  padding-left: 50px;
+  padding-right: 50px;
+  box-sizing: border-box;
+  font-family: "Helvetica Neue Light";
+  font-size: 1.1em;
 }
 footer {
-  width: 100%;
-  height: 200px;
-  border-top: 10px solid transparent;
   background-image: radial-gradient(circle 307px at center, #b1eb76 0%, #4b791f 100%), linear-gradient(to bottom right, transparent 50.5%, #608b30 50.5%), linear-gradient(to bottom left, transparent 50.5%, #608b30 50.5%), linear-gradient(to top right, transparent 50.5%, #608b30 50.5%), linear-gradient(to top left, transparent 50.5%, #608b30 50.5%);
   background-repeat: repeat, repeat-x, repeat-x, repeat-x, repeat-x;
   background-position: 0 0, 10px 0, 10px 0, 10px 100%, 10px 100%;
   background-size: auto auto, 20px 20px, 20px 20px, 20px 20px, 20px 20px;
   background-clip: padding-box, border-box, border-box, border-box, border-box;
   background-origin: padding-box, border-box, border-box, border-box, border-box;
+  width: 100%;
+  height: 200px;
+  border-top: 10px solid transparent;
+  color: white;
+  font-family: "Helvetica Neue Regular";
 }
 footer .footer-tape {
   width: 100%;
@@ -322,6 +368,7 @@ footer .footer-tape {
   margin-top: 50px;
   margin-bottom: 50px;
   background-color: #ef001d;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
 }
 footer .footer-tape .wrapper {
   width: 1200px;
@@ -329,4 +376,26 @@ footer .footer-tape .wrapper {
   margin-right: auto;
   display: flex;
   justify-content: space-between;
+}
+footer .footer-tape .wrapper span {
+  line-height: 3em;
+  font-size: 1em;
+  color: #ff6666;
+}
+footer .footer-tape .wrapper nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+footer .footer-tape .wrapper nav ul li a {
+  display: block;
+  margin-right: 10px;
+  text-decoration: none;
+  color: white;
+}
+footer .footer-tape .wrapper nav ul li a:hover {
+  text-decoration: underline;
+}
+footer .footer-tape .wrapper nav ul li:last-of-type a {
+  margin-right: 0;
 }
