--- a/nakitelTest/css/src/style.less
+++ b/nakitelTest/css/src/style.less
@@ -174,14 +174,14 @@ main {
 }
 // как добавить шум для фона? сейчас выглядит слишком "плоским"
 #first {
+  .bg-and-fence-border;
   width: 100%;
   height: 470px;
-  // height: 600px;
+  margin-bottom: 180px;
   box-shadow: inset 0px 5px 5px rgba(16, 16, 15, 0.5);
   font-family: @H-reg;
   color: white;
   border-bottom: 10px solid transparent;
-  .bg-and-fence-border;
 
   .upper {
     .wrapper-container;
@@ -356,14 +356,68 @@ main {
 
 #content {
   width: 100%;
-  height: 200px;
+
+  h1 {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: @Bebas;
+    color: @second-color;
+    font-size: 3em;
+  }
+
+  .wrapper {
+    .wrapper-container;
+
+    nav {
+      ul {
+        list-style: none;
+        padding: 0;
+        font-family: @H-reg;
+
+        li {
+          a {
+            display: block;
+            margin-bottom: 10px;
+            color: @second-color;
+            text-transform: uppercase;
+            text-decoration: none;
+
+            &:hover {
+              text-decoration: underline;
+            }
+
+          }
+          .active {
+            color: @main-color;
+          }
+        }
+      }
+    }
+
+    article {
+      width: 770px;
+      height: 852px;
+      background-size: contain;
+      background-image: url(../../img/article-bg.png);
+      padding-top: 30px;
+      padding-left: 50px;
+      padding-right: 50px;
+      box-sizing: border-box;
+      font-family: @H-light;
+      font-size: 1.1em;
+    }
+
+    // end of wrapper end content section
+  }
 }
 
 footer {
+  .bg-and-fence-border;
   width: 100%;
   height: 200px;
   border-top: 10px solid transparent;
-  .bg-and-fence-border;
+  color: white;
+  font-family: @H-reg;
 
   .footer-tape {
     width: 100%;
@@ -371,9 +425,43 @@ footer {
     margin-top: 50px;
     margin-bottom: 50px;
     background-color: @main-color;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
 
     .wrapper {
       .wrapper-container;
+
+      span {
+        line-height: 3em;
+        font-size: 1em;
+        color: #ff6666;
+      }
+
+      nav {
+        ul {
+          display: flex;
+          list-style: none;
+          padding: 0;
+
+          li {
+            a {
+              display: block;
+              margin-right: 10px;
+              text-decoration: none;
+              color: white;
+
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+            &:last-of-type {
+              a {
+                margin-right: 0;
+              }
+            }
+          }
+
+        }
+      }
     }
   }
 }
