--- a/nakitelTest/css/src/style.less
+++ b/nakitelTest/css/src/style.less
@@ -246,6 +246,7 @@ main {
       .cart {
         width: 190px;
         height: 70px;
+        border-radius: 2px;
         // TODO: change cart icon for svg - it's too small!
         background-image: url(../../img/cart-icon.png);
         background-repeat: no-repeat;
@@ -254,6 +255,7 @@ main {
         background-position-y: 18px;
         text-align: left;
         padding-left: 60px;
+        box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
 
         .button-container;
 
@@ -309,9 +311,11 @@ main {
         width: 190px;
         height: 85px;
         padding-left: 10px;
+        border-radius: 2px;
         font-size: 1.5em;
         font-weight: bold;
         text-transform: uppercase;
+        box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
 
         span {
           font-size: 1.3em;
@@ -351,7 +355,88 @@ main {
 
 #carousel {
   width: 100%;
-  height: 200px;
+  // height: 200px;
+
+  .slider {
+    position: relative;
+
+    .js_slide {
+      background-size: contain;
+      font-family: @H-reg;
+      font-style: italic;
+      color: white;
+    }
+
+    .item1 {
+      background-image: url(../../img/slider-img1.png);
+    }
+
+    .item2 {
+      background-image: url(../../img/slider-img2.jpg);
+      background-position-y: -180px;
+      background-size: cover;
+    }
+
+    .item3 {
+      background-image: url(../../img/slider-img3.jpg);
+    }
+
+    // img {
+    //   max-width: 100%;
+    // }
+  }
+
+
+    .frame {
+                /**
+                 * (optional) wrapper width, specifies width of the slider frame.
+                 */
+        width: 880px;
+
+        position: relative;
+        font-size: 1em;
+        line-height: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+    .slides {
+      display: inline-block;
+      }
+
+    li {
+      position: relative;
+      display: inline-block;
+
+                /**
+                 * (optional) if the content inside the slide element has a defined size.
+                 */
+        // width: 880px;
+        width: 1173px;
+        height: 347px;
+      }
+
+    .prev, .next {
+        position: absolute;
+        top: 50%;
+        margin-top: -25px;
+        display: block;
+        cursor: pointer;
+      }
+
+    .next {
+        right: 205px;
+      }
+
+    .prev {
+        left: 215px;
+      }
+
+    .next svg, .prev svg {
+        width: 25px;
+      }
 }
 
 #content {
@@ -399,14 +484,63 @@ main {
       height: 852px;
       background-size: contain;
       background-image: url(../../img/article-bg.png);
-      padding-top: 30px;
+      padding-top: 24px;
       padding-left: 50px;
       padding-right: 50px;
       box-sizing: border-box;
       font-family: @H-light;
       font-size: 1.1em;
+          z-index: 2;
     }
 
+    .banners {
+      .call {
+        font-size: 1.1em;
+        text-align: center;
+        line-height: 1.2em;
+        margin-bottom: 60px;
+
+        p {
+          margin-top: 0;
+          margin-bottom: 0;
+
+          &:nth-of-type(2) {
+            font-weight: bold;
+          }
+
+          &:last-of-type {
+            margin-bottom: 20px;
+          }
+        }
+
+        button {
+          width: 190px;
+          height: 85px;
+          padding-left: 10px;
+          border-radius: 2px;
+          font-size: 1.5em;
+          font-weight: bold;
+          text-transform: uppercase;
+          box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+
+          span {
+            font-size: 1.3em;
+          }
+          .button-container;
+        }
+      }
+
+      .banner {
+        width: 170px;
+        height: 121px;
+        margin-bottom: 60px;
+        background-image: url(../../img/banner.png);
+        background-repeat: no-repeat;
+        background-position-x: -4px;
+        background-position-y: -1px;
+        box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+      }
+    }
     // end of wrapper end content section
   }
 }
@@ -415,6 +549,9 @@ footer {
   .bg-and-fence-border;
   width: 100%;
   height: 200px;
+  position: relative;
+  z-index: 1;
+  top: -50px;
   border-top: 10px solid transparent;
   color: white;
   font-family: @H-reg;
