--- a/nakitelTest/css/src/style.less
+++ b/nakitelTest/css/src/style.less
@@ -76,7 +76,6 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    // box-shadow: 0 5px 5px rgba(16, 16, 15, 0.5);
 
     .menu-icon {
       width: 40px;
@@ -164,7 +163,6 @@ header {
       padding-left: 40px;
 
       p {
-        width: 110px;
         margin-top: 0;
         margin-bottom: 0;
       }
@@ -224,12 +222,12 @@ header {
 main {
   background-image: url(../../img/main-bg.jpg);
 }
-// как добавить шум для фона? сейчас выглядит слишком "плоским"
+
 #first {
   .bg-and-fence-border;
   width: 100%;
   height: 470px;
-  margin-bottom: 180px;
+  margin-bottom: 220px;
   box-shadow: inset 0px 5px 5px rgba(16, 16, 15, 0.5);
   font-family: @H-reg;
   color: white;
@@ -298,8 +296,6 @@ main {
       }
 
       .cart {
-        width: 190px;
-        height: 70px;
         border-radius: 2px;
         // TODO: change cart icon for svg - it's too small!
         background-image: url(../../img/cart-icon.png);
@@ -335,6 +331,7 @@ main {
 
       p {
         margin-top: 0;
+        font-family: sans-serif;
         font-size: 3em;
         color: darken(@second-color, 15%);
         text-transform: uppercase;
@@ -396,11 +393,57 @@ main {
       p {
         margin-top: 0;
         margin-bottom: 0;
+        font-family: @Bebas;
         font-weight: bold;
-        font-size: 1em;
 
         &:first-of-type {
-          font-size: 3em;
+          font-size: 4em;
+        }
+
+        &:last-of-type {
+          font-size: 1.5em;
+          margin-top: -10px;
+        }
+      }
+
+      &:first-of-type {
+        p:first-of-type {
+          margin-top: 5px;
+        }
+      }
+
+      &:nth-child(2) {
+        p:first-of-type {
+          margin-top: -8px;
+          margin-left: 15px;
+        }
+
+        p:last-of-type {
+          margin-left: 20px;
+        }
+      }
+
+      &:nth-child(3) {
+        p:first-of-type {
+          margin-top: -8px;
+          margin-left: 5px;
+        }
+
+        p:last-of-type {
+          margin-left: 15px;
+        }
+      }
+
+      &:nth-child(4) {
+        p:first-of-type {
+          margin-top: -14px;
+        }
+      }
+
+      &:last-child {
+        p:first-of-type {
+          margin-top: -20px;
+          margin-left: -10px;
         }
       }
     }
@@ -416,29 +459,35 @@ main {
     position: relative;
 
     .js_slide {
-      background-size: contain;
+      background-size: cover;
+      background-repeat: no-repeat;
       font-family: @H-reg;
       font-style: italic;
       color: white;
+      border: 5px solid white;
+      box-shadow: 0 3px 10px rgba(1, 1, 1, 0.75), inset 0 8px 11px rgba(1, 1, 1, 0.75);
     }
 
     .item1 {
       background-image: url(../../img/slider-img1.png);
+      background-position-x: -9px;
+      background-position-y: -6px;
+      height: 340px;
+      width: 1158px;
+      background-size: inherit;
     }
 
     .item2 {
       background-image: url(../../img/slider-img2.jpg);
       background-position-y: -180px;
       background-size: cover;
+      width: 1162px;
+      height: 341px;
     }
 
     .item3 {
       background-image: url(../../img/slider-img3.jpg);
     }
-
-    // img {
-    //   max-width: 100%;
-    // }
   }
 
 
@@ -446,7 +495,7 @@ main {
                 /**
                  * (optional) wrapper width, specifies width of the slider frame.
                  */
-        width: 880px;
+        width: 1170px;
 
         position: relative;
         font-size: 1em;
@@ -540,12 +589,14 @@ main {
       padding-top: 24px;
       padding-left: 50px;
       padding-right: 50px;
+      padding-bottom: 60px;
       box-sizing: border-box;
       font-family: @H-light;
       font-size: 1.1em;
       z-index: 2;
       position: relative;
       box-shadow: 0 4px 10px rgba(1, 1, 1, 0.6);
+      line-height: 24px;
 
       p {
         position: relative;
@@ -623,11 +674,11 @@ main {
 footer {
   .bg-and-fence-border;
   width: 100%;
-  height: 200px;
+  height: 290px;
   position: relative;
   z-index: 1;
   // top: -50px;
-  margin-top: -50px;
+  margin-top: -75px;
   border-top: 10px solid transparent;
   color: white;
   font-family: @H-reg;
@@ -635,7 +686,7 @@ footer {
   .footer-tape {
     width: 100%;
     height: 44px;
-    margin-top: 50px;
+    margin-top: 140px;
     margin-bottom: 50px;
     background-color: @main-color;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.75), inset 0 2px 6px rgba(0, 0, 0, 0.75);
@@ -663,6 +714,8 @@ footer {
               margin-right: 10px;
               text-decoration: none;
               color: white;
+              font-size: 1.3em;
+              line-height: 0.8em;
 
               &:hover {
                 text-decoration: underline;
