--- a/nakitelTest/css/src/fonts.css
+++ b/nakitelTest/css/src/fonts.css
@@ -8,21 +8,25 @@
 
 @font-face {
   font-family: "Helvetica Neue Regular";
-  src: url(../../fonts/Bebas_Neue/HelveticaNeueCyr-Medium.otf);
+  src: url(../../fonts/Helvetica_Neue/HelveticaNeueCyr-Medium.otf);
   font-weight: normal;
   font-style: normal;
 };
 
 @font-face {
   font-family: "Helvetica Neue Bold";
-  src: url(../../fonts/Bebas_Neue/HelveticaNeueCyr-Bold.otf);
+  src: url(../../fonts/Helvetica_Neue/HelveticaNeueCyr-Bold.otf);
   font-weight: normal;
   font-style: normal;
 };
 
 @font-face {
   font-family: "Helvetica Neue Light";
-  src: url(../../fonts/Bebas_Neue/HelveticaNeueCyr-Light.otf);
+  src: url(../../fonts/Helvetica_Neue/HelveticaNeueCyr-Light.otf);
   font-weight: normal;
   font-style: normal;
 };
+
+@font-face {
+
+}
