--- a/nakitelTest/css/src/style.less
+++ b/nakitelTest/css/src/style.less
@@ -24,6 +24,7 @@
   }
 }
 
+// mb add some paramers to mixin (width?)
 .wrapper-container {
   width: 1200px;
   margin-left: auto;
@@ -731,5 +732,225 @@ footer {
         }
       }
     }
+  }
+}
+
+// need to change markdown of doors-div to add another carousel
+
+@media screen and (max-width: 325px) {
+  // main {
+  //   width: 100%;
+  // }
+
+  header {
+    .wrapper {
+      width: 290px;
+      justify-content: space-between;
+
+      .menu-icon {
+        margin-right: 10px;
+        margin-left: 10px;
+      }
+
+      button:first-of-type {
+        margin-left: 120px;
+      }
+
+      button:last-of-type {
+        margin-right: 10px;
+      }
+
+      .header-nav {
+        // mb width is too big
+        width: 100%;
+        background-color: @main-color;
+        z-index: 10;
+        top: 49px;
+        left: 0px;
+        box-shadow: inset 0px 5px 5px rgba(16, 16, 15, 0.5);
+
+        ul {
+          flex-direction: column;
+          text-align: center;
+
+          li {
+            a {
+              font-size: 1.3em;
+              min-height: 30px;
+            }
+
+            &:last-child {
+              &:after {
+                content: "Поиск";
+                display: block;
+                line-height: 1.3em;
+                font-size: 1.3em;
+                min-height: 30px;
+          // why hover did'nt work?
+                &:hover {
+                  cursor: pointer;
+                  text-decoration: underline;
+                }
+              }
+            }
+          }
+        }
+      }
+
+
+      input[type="text"],
+      .cart {
+        display: none;
+      }
+    }
+  }
+
+  #first {
+    display: flex;
+    flex-direction: column;
+    height: 570px;
+    margin-bottom: 0px;
+
+    .upper {
+      width: 100%;
+      margin-bottom: 600px;
+      flex-direction: column;
+
+      .logo {
+        order: 1;
+        height: 150px;
+        display: flex;
+        margin-bottom: 100px;
+        margin-top: 10px;
+
+        img {
+          height: 80px;
+          margin-left: 7px;
+        }
+
+        p {
+          margin-top: 13px;
+          margin-left: 10px;
+        }
+      }
+
+      .leftGroup {
+        order: 2;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 15px;
+
+        > a:first-of-type, a {
+          font-size: 1.5em;
+        }
+
+        .socials {
+          margin-left: 10px;
+          width: 90%;
+
+          a {
+            min-width: 50px;
+            min-height: 50px;
+            background-size: contain;
+          }
+        }
+
+        .cart {
+          p:first-of-type {
+            font-size: 1.5em;
+          }
+
+          p:nth-of-type(2),
+          p:last-of-type {
+            font-size: 1.2em;
+          }
+        }
+      }
+
+      .rightGroup {
+        order: 3;
+
+        > p {
+          font-size: 1.2em;
+        }
+
+        button {
+          width: 230px;
+          height: 100px;
+          font-size: 1.8em;
+
+          span {
+            font-size: 1.3em;
+          }
+        }
+      }
+    }
+
+    .doors {
+      display: none;
+    }
+  }
+
+  #carousel {
+    display: none;
+  }
+
+  #content {
+    // padding-top: 250px;
+
+    h1 {
+      font-size: 3.5em;
+      margin-bottom: 10px;
+    }
+
+    .wrapper {
+      width: 100%;
+      flex-direction: column;
+
+      nav {
+        display: none;
+      }
+
+      article {
+        width: 290px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 35px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-bottom: 30px;
+      }
+
+      .banners {
+        div:first-child {
+          display: none;
+        }
+
+        .banner,
+        .call {
+          margin-bottom: 30px;
+        }
+      }
+    }
+  }
+
+  footer {
+    margin-top: 0;
+    width: 100%;
+        height: 170px;
+
+        .footer-tape {
+          width: 100%;
+          margin-top: 70px;
+
+          .wrapper {
+            width: 90%;
+            justify-content: center;
+
+            nav {
+              display: none;
+            }
+          }
+        }
   }
 }
